// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reviews in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#FAFAF8",
          },
        ]
      }
    >
      <RNCSafeAreaView
        edges={
          {
            "bottom": "additive",
            "left": "additive",
            "right": "additive",
            "top": "additive",
          }
        }
        style={
          [
            {
              "flex": 1,
            },
            {
              "backgroundColor": "#FAFAF8",
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "flex": 1,
              },
              {
                "paddingBottom": 0,
              },
            ]
          }
        >
          <View
            onFocusCapture={[Function]}
            style={
              {
                "flex": 1,
              }
            }
          >
            <RCTScrollView
              automaticallyAdjustKeyboardInsets={true}
              contentContainerStyle={
                [
                  [
                    {
                      "flexGrow": 1,
                    },
                    false,
                    undefined,
                  ],
                  {
                    "paddingBottom": 16,
                  },
                ]
              }
              keyboardDismissMode="on-drag"
              keyboardShouldPersistTaps="handled"
              showsVerticalScrollIndicator={false}
              style={
                [
                  {
                    "flex": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    {
                      "flex": 1,
                    },
                  ],
                ]
              }
            >
              <View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingBottom": 8,
                      "paddingHorizontal": 16,
                      "paddingTop": 10,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 10,
                        "marginRight": 8,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 10,
                          },
                          {
                            "minHeight": 28,
                          },
                        ]
                      }
                    >
                      <RNSVGSvgView
                        accessibilityLabel="Expyrico"
                        align="xMidYMid"
                        bbHeight={28}
                        bbWidth={28}
                        focusable={false}
                        height={28}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          [
                            {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            {
                              "flex": 0,
                              "height": 28,
                              "width": 28,
                            },
                          ]
                        }
                        vbHeight={865}
                        vbWidth={865}
                        width={28}
                      >
                        <RNSVGGroup
                          fill={
                            {
                              "payload": 4278190080,
                              "type": 0,
                            }
                          }
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            matrix={
                              [
                                1,
                                0,
                                0,
                                1,
                                0,
                                190,
                              ]
                            }
                          >
                            <RNSVGPath
                              d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                              fill={
                                {
                                  "payload": 4283149962,
                                  "type": 0,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                              fill={
                                {
                                  "payload": 4294288931,
                                  "type": 0,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                              fill={
                                {
                                  "payload": 4292887594,
                                  "type": 0,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                              fill={
                                {
                                  "payload": 4281084968,
                                  "type": 0,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <Text
                        ellipsizeMode="tail"
                        numberOfLines={1}
                        style={
                          [
                            {
                              "fontSize": 16,
                              "fontWeight": "700",
                              "letterSpacing": -0.3,
                            },
                            {
                              "color": "#2C2C28",
                            },
                          ]
                        }
                      >
                        Reviews & Recommendations
                      </Text>
                      <Text
                        ellipsizeMode="tail"
                        numberOfLines={1}
                        style={
                          [
                            {
                              "fontSize": 12,
                              "marginTop": 1,
                            },
                            {
                              "color": "#8C8C85",
                            },
                          ]
                        }
                      >
                        Your trusted notes & picks.
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    {
                      "paddingHorizontal": 16,
                      "paddingVertical": 8,
                    }
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "borderRadius": 12,
                          "borderWidth": 1,
                          "flexDirection": "row",
                          "height": 44,
                          "paddingHorizontal": 12,
                        },
                        {
                          "backgroundColor": "#FAFAF8",
                          "borderColor": "#F0F0ED",
                        },
                      ]
                    }
                  >
                    <TextInput
                      clearButtonMode="while-editing"
                      onChangeText={[Function]}
                      placeholder="Search products, brands, or notes..."
                      placeholderTextColor="#8C8C85"
                      returnKeyType="search"
                      style={
                        [
                          {
                            "flex": 1,
                            "fontSize": 14,
                            "height": "100%",
                            "padding": 0,
                          },
                          {
                            "color": "#2C2C28",
                          },
                        ]
                      }
                      value=""
                    />
                  </View>
                </View>
                <View
                  style={
                    [
                      {
                        "borderRadius": 12,
                        "borderWidth": 1,
                        "flexDirection": "row",
                        "marginBottom": 10,
                        "marginHorizontal": 16,
                        "marginTop": 4,
                        "padding": 4,
                      },
                      {
                        "backgroundColor": "#FAFAF8",
                        "borderColor": "#F0F0ED",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityLabel="Community Picks"
                    accessibilityRole="tab"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": true,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      [
                        {
                          "alignItems": "center",
                          "borderRadius": 9,
                          "flex": 1,
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "minHeight": 40,
                        },
                        [
                          {
                            "elevation": 2,
                            "shadowColor": "#000",
                            "shadowOffset": {
                              "height": 1,
                              "width": 0,
                            },
                            "shadowOpacity": 0.08,
                            "shadowRadius": 3,
                          },
                          {
                            "backgroundColor": "#FAFAF8",
                          },
                        ],
                      ]
                    }
                  >
                    <Text
                      style={
                        [
                          {
                            "fontSize": 13,
                          },
                          {
                            "color": "#3A8F6F",
                            "fontWeight": "700",
                          },
                        ]
                      }
                    >
                      Community
                    </Text>
                  </View>
                  <View
                    accessibilityLabel="My Reviews"
                    accessibilityRole="tab"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": false,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      [
                        {
                          "alignItems": "center",
                          "borderRadius": 9,
                          "flex": 1,
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "minHeight": 40,
                        },
                        false,
                      ]
                    }
                  >
                    <Text
                      style={
                        [
                          {
                            "fontSize": 13,
                          },
                          {
                            "color": "#8C8C85",
                            "fontWeight": "500",
                          },
                        ]
                      }
                    >
                      My Reviews
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    [
                      {
                        "flex": 1,
                      },
                      {
                        "backgroundColor": "#FAFAF8",
                      },
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "borderBottomWidth": 1,
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                          "paddingHorizontal": 16,
                          "paddingVertical": 10,
                        },
                        {
                          "borderBottomColor": "#F0F0ED",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                        }
                      }
                    >
                      <Text
                        style={
                          [
                            {
                              "fontSize": 14,
                              "fontWeight": "700",
                            },
                            {
                              "color": "#2C2C28",
                            },
                          ]
                        }
                      >
                        Community Picks
                      </Text>
                    </View>
                    <View
                      style={
                        {
                          "flexDirection": "row",
                          "gap": 8,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="Sort by top helpful"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        hitSlop={8}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "alignItems": "center",
                              "borderRadius": 999,
                              "borderWidth": 1,
                              "flexDirection": "row",
                              "justifyContent": "center",
                              "minHeight": 36,
                              "paddingHorizontal": 12,
                              "paddingVertical": 6,
                            },
                            {
                              "backgroundColor": "#D6F0E6",
                              "borderColor": "#4BAE8A",
                              "opacity": 1,
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            {
                              "marginRight": 4,
                            }
                          }
                        >
                          🔥
                        </Text>
                        <Text
                          style={
                            [
                              {
                                "fontSize": 12,
                              },
                              {
                                "color": "#3A8F6F",
                                "fontWeight": "700",
                              },
                            ]
                          }
                        >
                          Top helpful
                        </Text>
                      </View>
                      <View
                        accessibilityLabel="Sort by newest"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        hitSlop={8}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "alignItems": "center",
                              "borderRadius": 999,
                              "borderWidth": 1,
                              "flexDirection": "row",
                              "justifyContent": "center",
                              "minHeight": 36,
                              "paddingHorizontal": 12,
                              "paddingVertical": 6,
                            },
                            {
                              "backgroundColor": "#FAFAF8",
                              "borderColor": "#F0F0ED",
                              "opacity": 1,
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            {
                              "marginRight": 4,
                            }
                          }
                        >
                          ⏱️
                        </Text>
                        <Text
                          style={
                            [
                              {
                                "fontSize": 12,
                              },
                              {
                                "color": "#8C8C85",
                                "fontWeight": "500",
                              },
                            ]
                          }
                        >
                          Newest
                        </Text>
                      </View>
                    </View>
                  </View>
                  <RCTScrollView
                    ListEmptyComponent={
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "justifyContent": "center",
                            "paddingVertical": 48,
                          }
                        }
                      >
                        <ActivityIndicator
                          color="#4BAE8A"
                          size="small"
                        />
                      </View>
                    }
                    ListFooterComponent={null}
                    contentContainerStyle={
                      {
                        "padding": 16,
                        "paddingBottom": 80,
                      }
                    }
                    data={[]}
                    getItem={[Function]}
                    getItemCount={[Function]}
                    keyExtractor={[Function]}
                    onContentSizeChange={[Function]}
                    onEndReached={[Function]}
                    onEndReachedThreshold={0.4}
                    onLayout={[Function]}
                    onMomentumScrollBegin={[Function]}
                    onMomentumScrollEnd={[Function]}
                    onScroll={[Function]}
                    onScrollBeginDrag={[Function]}
                    onScrollEndDrag={[Function]}
                    refreshControl={
                      <RefreshControlMock
                        colors={
                          [
                            "#4BAE8A",
                          ]
                        }
                        onRefresh={[Function]}
                        refreshing={false}
                        tintColor="#4BAE8A"
                      />
                    }
                    removeClippedSubviews={false}
                    renderItem={[Function]}
                    scrollEventThrottle={0.0001}
                    stickyHeaderIndices={[]}
                    viewabilityConfigCallbackPairs={[]}
                  >
                    <RCTRefreshControl />
                    <View>
                      <View
                        onLayout={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "justifyContent": "center",
                            "paddingVertical": 48,
                          }
                        }
                      >
                        <ActivityIndicator
                          color="#4BAE8A"
                          size="small"
                        />
                      </View>
                    </View>
                  </RCTScrollView>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
      </RNCSafeAreaView>
    </View>
  </View>
</View>
`;

exports[`reviews in expyricoDark snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#111512",
          },
        ]
      }
    >
      <RNCSafeAreaView
        edges={
          {
            "bottom": "additive",
            "left": "additive",
            "right": "additive",
            "top": "additive",
          }
        }
        style={
          [
            {
              "flex": 1,
            },
            {
              "backgroundColor": "#111512",
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            [
              {
                "flex": 1,
              },
              {
                "paddingBottom": 0,
              },
            ]
          }
        >
          <View
            onFocusCapture={[Function]}
            style={
              {
                "flex": 1,
              }
            }
          >
            <RCTScrollView
              automaticallyAdjustKeyboardInsets={true}
              contentContainerStyle={
                [
                  [
                    {
                      "flexGrow": 1,
                    },
                    false,
                    undefined,
                  ],
                  {
                    "paddingBottom": 16,
                  },
                ]
              }
              keyboardDismissMode="on-drag"
              keyboardShouldPersistTaps="handled"
              showsVerticalScrollIndicator={false}
              style={
                [
                  {
                    "flex": 1,
                  },
                  [
                    {
                      "flex": 1,
                    },
                    {
                      "flex": 1,
                    },
                  ],
                ]
              }
            >
              <View>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "paddingBottom": 8,
                      "paddingHorizontal": 16,
                      "paddingTop": 10,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                        "gap": 10,
                        "marginRight": 8,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 10,
                          },
                          {
                            "minHeight": 28,
                          },
                        ]
                      }
                    >
                      <RNSVGSvgView
                        accessibilityLabel="Expyrico"
                        align="xMidYMid"
                        bbHeight={28}
                        bbWidth={28}
                        focusable={false}
                        height={28}
                        meetOrSlice={0}
                        minX={0}
                        minY={0}
                        style={
                          [
                            {
                              "backgroundColor": "transparent",
                              "borderWidth": 0,
                            },
                            {
                              "flex": 0,
                              "height": 28,
                              "width": 28,
                            },
                          ]
                        }
                        vbHeight={865}
                        vbWidth={865}
                        width={28}
                      >
                        <RNSVGGroup
                          fill={
                            {
                              "payload": 4278190080,
                              "type": 0,
                            }
                          }
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                            matrix={
                              [
                                1,
                                0,
                                0,
                                1,
                                0,
                                190,
                              ]
                            }
                          >
                            <RNSVGPath
                              d="M403.14,156.315c-95.566,9.562 -196.039,111.566 -196.876,113.645c-44.394,63.261 -51.483,111.55 -53.874,158.883c-0.344,6.818 -10.631,4.76 -15.196,4.758c-128.706,-0.058 -134.778,0.342 -135.986,-0.738c-3.929,-3.509 -1.857,-124.65 62.948,-227.356c135.19,-214.258 358.221,-205.617 359.138,-204.747c2.908,2.759 1.272,138.071 1.127,150.076c-0.087,7.208 -3.941,3.744 -21.28,5.479Z"
                              fill={
                                {
                                  "payload": 4283149962,
                                  "type": 0,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M475.115,1.795c81.299,9.214 168.648,35.061 257.927,119.245c0.432,0.407 4.469,4.214 1.505,7.268c-8.278,8.528 -100.464,103.493 -105.208,104.897c-9.414,2.786 -21.543,-33.532 -109.982,-64.799c-39.276,-13.886 -77,-11.389 -79.276,-15.854c-0.859,-1.684 -0.398,-135.848 -0.357,-147.66c0.024,-7.022 10.176,-4.959 35.392,-3.097Z"
                              fill={
                                {
                                  "payload": 4294288931,
                                  "type": 0,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M711.958,426.857c-0.064,-1.097 0.351,-32.052 -12.346,-74.108c-20.592,-68.208 -60.742,-102.393 -58.941,-108.115c0.189,-0.601 104.507,-106.505 106.707,-106.864c4.358,-0.711 34.589,37.783 53.096,67.56c65.4,105.222 66.587,224.534 62.721,227.546c-2.569,2.001 -134.341,0.796 -146.022,0.689c-6.748,-0.062 -5.026,-5.895 -5.216,-6.707Z"
                              fill={
                                {
                                  "payload": 4292887594,
                                  "type": 0,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M137.568,209.402c0.099,-7.044 269.935,170.48 273.626,170.585c0.674,0.019 23.14,-8.868 45.531,1.862c55.373,26.536 28.262,115.076 -33.62,103.553c-48.798,-9.087 -45.849,-54.453 -45.457,-60.493c0.461,-7.098 -240.111,-213.364 -240.081,-215.508Z"
                              fill={
                                {
                                  "payload": 4294638328,
                                  "type": 0,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGGroup>
                      </RNSVGSvgView>
                    </View>
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <Text
                        ellipsizeMode="tail"
                        numberOfLines={1}
                        style={
                          [
                            {
                              "fontSize": 16,
                              "fontWeight": "700",
                              "letterSpacing": -0.3,
                            },
                            {
                              "color": "#FAFAF8",
                            },
                          ]
                        }
                      >
                        Reviews & Recommendations
                      </Text>
                      <Text
                        ellipsizeMode="tail"
                        numberOfLines={1}
                        style={
                          [
                            {
                              "fontSize": 12,
                              "marginTop": 1,
                            },
                            {
                              "color": "#B7BDB7",
                            },
                          ]
                        }
                      >
                        Your trusted notes & picks.
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    {
                      "paddingHorizontal": 16,
                      "paddingVertical": 8,
                    }
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "borderRadius": 12,
                          "borderWidth": 1,
                          "flexDirection": "row",
                          "height": 44,
                          "paddingHorizontal": 12,
                        },
                        {
                          "backgroundColor": "#191F1B",
                          "borderColor": "#2D3A34",
                        },
                      ]
                    }
                  >
                    <TextInput
                      clearButtonMode="while-editing"
                      onChangeText={[Function]}
                      placeholder="Search products, brands, or notes..."
                      placeholderTextColor="#B7BDB7"
                      returnKeyType="search"
                      style={
                        [
                          {
                            "flex": 1,
                            "fontSize": 14,
                            "height": "100%",
                            "padding": 0,
                          },
                          {
                            "color": "#FAFAF8",
                          },
                        ]
                      }
                      value=""
                    />
                  </View>
                </View>
                <View
                  style={
                    [
                      {
                        "borderRadius": 12,
                        "borderWidth": 1,
                        "flexDirection": "row",
                        "marginBottom": 10,
                        "marginHorizontal": 16,
                        "marginTop": 4,
                        "padding": 4,
                      },
                      {
                        "backgroundColor": "#191F1B",
                        "borderColor": "#2D3A34",
                      },
                    ]
                  }
                >
                  <View
                    accessibilityLabel="Community Picks"
                    accessibilityRole="tab"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": true,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      [
                        {
                          "alignItems": "center",
                          "borderRadius": 9,
                          "flex": 1,
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "minHeight": 40,
                        },
                        [
                          {
                            "elevation": 2,
                            "shadowColor": "#000",
                            "shadowOffset": {
                              "height": 1,
                              "width": 0,
                            },
                            "shadowOpacity": 0.08,
                            "shadowRadius": 3,
                          },
                          {
                            "backgroundColor": "#111512",
                          },
                        ],
                      ]
                    }
                  >
                    <Text
                      style={
                        [
                          {
                            "fontSize": 13,
                          },
                          {
                            "color": "#D6F0E6",
                            "fontWeight": "700",
                          },
                        ]
                      }
                    >
                      Community
                    </Text>
                  </View>
                  <View
                    accessibilityLabel="My Reviews"
                    accessibilityRole="tab"
                    accessibilityState={
                      {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": false,
                      }
                    }
                    accessibilityValue={
                      {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      [
                        {
                          "alignItems": "center",
                          "borderRadius": 9,
                          "flex": 1,
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "minHeight": 40,
                        },
                        false,
                      ]
                    }
                  >
                    <Text
                      style={
                        [
                          {
                            "fontSize": 13,
                          },
                          {
                            "color": "#B7BDB7",
                            "fontWeight": "500",
                          },
                        ]
                      }
                    >
                      My Reviews
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    [
                      {
                        "flex": 1,
                      },
                      {
                        "backgroundColor": "#111512",
                      },
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "borderBottomWidth": 1,
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                          "paddingHorizontal": 16,
                          "paddingVertical": 10,
                        },
                        {
                          "borderBottomColor": "#2D3A34",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                        }
                      }
                    >
                      <Text
                        style={
                          [
                            {
                              "fontSize": 14,
                              "fontWeight": "700",
                            },
                            {
                              "color": "#FAFAF8",
                            },
                          ]
                        }
                      >
                        Community Picks
                      </Text>
                    </View>
                    <View
                      style={
                        {
                          "flexDirection": "row",
                          "gap": 8,
                        }
                      }
                    >
                      <View
                        accessibilityLabel="Sort by top helpful"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        hitSlop={8}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "alignItems": "center",
                              "borderRadius": 999,
                              "borderWidth": 1,
                              "flexDirection": "row",
                              "justifyContent": "center",
                              "minHeight": 36,
                              "paddingHorizontal": 12,
                              "paddingVertical": 6,
                            },
                            {
                              "backgroundColor": "#203B31",
                              "borderColor": "#4BAE8A",
                              "opacity": 1,
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            {
                              "marginRight": 4,
                            }
                          }
                        >
                          🔥
                        </Text>
                        <Text
                          style={
                            [
                              {
                                "fontSize": 12,
                              },
                              {
                                "color": "#D6F0E6",
                                "fontWeight": "700",
                              },
                            ]
                          }
                        >
                          Top helpful
                        </Text>
                      </View>
                      <View
                        accessibilityLabel="Sort by newest"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "busy": undefined,
                            "checked": undefined,
                            "disabled": undefined,
                            "expanded": undefined,
                            "selected": undefined,
                          }
                        }
                        accessibilityValue={
                          {
                            "max": undefined,
                            "min": undefined,
                            "now": undefined,
                            "text": undefined,
                          }
                        }
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        hitSlop={8}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "alignItems": "center",
                              "borderRadius": 999,
                              "borderWidth": 1,
                              "flexDirection": "row",
                              "justifyContent": "center",
                              "minHeight": 36,
                              "paddingHorizontal": 12,
                              "paddingVertical": 6,
                            },
                            {
                              "backgroundColor": "#111512",
                              "borderColor": "#2D3A34",
                              "opacity": 1,
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            {
                              "marginRight": 4,
                            }
                          }
                        >
                          ⏱️
                        </Text>
                        <Text
                          style={
                            [
                              {
                                "fontSize": 12,
                              },
                              {
                                "color": "#B7BDB7",
                                "fontWeight": "500",
                              },
                            ]
                          }
                        >
                          Newest
                        </Text>
                      </View>
                    </View>
                  </View>
                  <RCTScrollView
                    ListEmptyComponent={
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "justifyContent": "center",
                            "paddingVertical": 48,
                          }
                        }
                      >
                        <ActivityIndicator
                          color="#4BAE8A"
                          size="small"
                        />
                      </View>
                    }
                    ListFooterComponent={null}
                    contentContainerStyle={
                      {
                        "padding": 16,
                        "paddingBottom": 80,
                      }
                    }
                    data={[]}
                    getItem={[Function]}
                    getItemCount={[Function]}
                    keyExtractor={[Function]}
                    onContentSizeChange={[Function]}
                    onEndReached={[Function]}
                    onEndReachedThreshold={0.4}
                    onLayout={[Function]}
                    onMomentumScrollBegin={[Function]}
                    onMomentumScrollEnd={[Function]}
                    onScroll={[Function]}
                    onScrollBeginDrag={[Function]}
                    onScrollEndDrag={[Function]}
                    refreshControl={
                      <RefreshControlMock
                        colors={
                          [
                            "#4BAE8A",
                          ]
                        }
                        onRefresh={[Function]}
                        refreshing={false}
                        tintColor="#4BAE8A"
                      />
                    }
                    removeClippedSubviews={false}
                    renderItem={[Function]}
                    scrollEventThrottle={0.0001}
                    stickyHeaderIndices={[]}
                    viewabilityConfigCallbackPairs={[]}
                  >
                    <RCTRefreshControl />
                    <View>
                      <View
                        onLayout={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "justifyContent": "center",
                            "paddingVertical": 48,
                          }
                        }
                      >
                        <ActivityIndicator
                          color="#4BAE8A"
                          size="small"
                        />
                      </View>
                    </View>
                  </RCTScrollView>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
      </RNCSafeAreaView>
    </View>
  </View>
</View>
`;
